[package]
name = "Hippo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = { git = "https://github.com/vulkano-rs/vulkano", branch = "master", features = ["macros"] }
vulkano-shaders = {}
winit = { version = "0.29.10" }